	* CORE: Added support for raw selects in inner queries.  More powerful and flexible.
	* CORE: Added support for @DatabaseField(readOnly = true) for query only fields.  Thanks to Casey.
    * CORE: Added support for using java.sql.Timestamp fields with @DatabaseField(version = true).
	* CORE: Added support for QueryBuilder.prepareStatementInfo() to return statement and args.  Thanks to SO user.
	* CORE: Fixed problems with SQLExceptions thrown during transaction rollbacks.  Thanks to Miroslav Nadhajský.
	* CORE: Fixed a stupid bug in the handling of ColumnArgs and Strings (plus others).  Thanks to jon.
	* JDBC: Made some portions of JdbcPooledConnectionSource protected for subclasses.  Thanks to Miroslav Nadhajsky.

4.45: 3/18/2013
	* CORE: Fixed bad bug introduced in 4.43 that broke date-string backwards compatibility.  Thanks to Howard Liberty. 
	* ANDROID: Added better exception handling around inner classes.  Thanks to Jonathan Caryl.
	* ANDROID: Fixed bad problem with recursion and OrmLiteConfigUtil.  Thanks to Jonathan Caryl.

4.44: 3/13/2013
	* CORE: Improved the speed of the version checking under Android.  Thanks much to Nick Campion.
	* ALL: Moved to github.com and to use git for all packages.

4.43: 2/5/2013 (svn r2719)
	* CORE: WARNING: changed format of date-string which broke backwards compatibility.  Use version 4.45+.
	* CORE: Added QueryBuilder.countOf() and queryRaw() methods as shortcuts to their DAO equivalents.
	* CORE: Added Where.queryForFirst(), queryRaw(), queryRawFirst(), countOf() methods as shortcut to QueryBuilder.
	* CORE: Added the ColumnArg feature to compare two columns using QueryBuilder in simple queries and joins.
	* CORE: Fixed a problem with GROUP BY, ORDER BY, and HAVING order.  Bug #134.
	* CORE: Fixed possible problem with field-type comparison in certain situations.  Thanks to shikajiro.  Bug #136.
	* CORE: Added ? arguments to QueryBuilder.orderByRaw(...) method.  Thanks a bunch to Nathan Jones.  Feature #138.